Still Trying app-scan

--- a/example.css
+++ b/example.css
@@ -1,4 +1,4 @@
-/* example.css file */
+/* example.css file test */
 
 /* Insecurely embedded font from an untrusted source (A3 - Sensitive Data Exposure) */
 @font-face {
